[phone, feed] added colors and styling

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_SERVER=http://localhost:8000
 REACT_APP_SPOTIFY_ID=4a253ff988cf484da6e2f8680b3ac336
 REACT_APP_SPOTIFY_SECRET=51573d7f14d6411cb057b11ac85f9dac
+REACT_APP_CLOUD_NAME=tcgilbert
