--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
+    "cloudinary-react": "^1.6.8",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
